compiler/parser/parser.output
State 175 conflicts: 1 shift/reduce


Grammar

    0 $accept: program T_eof

    1 program: func_def

    2 func_def: header local_def_gen block

    3 local_def_gen: /* empty */
    4              | local_def local_def_gen

    5 header: "fun" T_id '(' ')' ':' ret_type
    6       | "fun" T_id '(' fpar_def fpar_def_gen ')' ':' ret_type

    7 fpar_def_gen: /* empty */
    8             | ';' fpar_def fpar_def_gen

    9 fpar_def: "ref" T_id comma_id_gen ':' fpar_type
   10         | T_id comma_id_gen ':' fpar_type

   11 comma_id_gen: /* empty */
   12             | ',' T_id comma_id_gen

   13 data_type: "int"
   14          | "char"

   15 type: data_type type_gen

   16 type_gen: /* empty */
   17         | '[' "const_int" ']' type_gen

   18 ret_type: data_type
   19         | "nothing"

   20 fpar_type: data_type '[' ']' type_gen
   21          | data_type type_gen

   22 local_def: func_def
   23          | func_decl
   24          | var_def

   25 func_decl: header ';'

   26 var_def: "var" T_id comma_id_gen ':' type ';'

   27 stmt: ';'
   28     | l_value "<-" expr ';'
   29     | block
   30     | func_call_stmt ';'
   31     | "if" cond "then" stmt
   32     | "if" cond "then" stmt "else" stmt
   33     | "while" cond "do" stmt
   34     | "return" ';'
   35     | "return" expr ';'
   36     | "writeInteger" '(' expr ')' ';'
   37     | "writeChar" '(' expr ')' ';'
   38     | "writeString" '(' T_id ')' ';'
   39     | "writeString" '(' T_const_string ')' ';'
   40     | "readString" '(' expr ',' T_id ')'
   41     | "strcpy" '(' l_value ',' l_value ')'
   42     | "strcat" '(' l_value ',' l_value ')'

   43 block: '{' stmt_list '}'

   44 stmt_list: /* empty */
   45          | stmt_list stmt

   46 func_call_stmt: T_id '(' ')'
   47               | T_id '(' expr comma_expr_gen ')'

   48 func_call_expr: T_id '(' ')'
   49               | T_id '(' expr comma_expr_gen ')'

   50 comma_expr_gen: /* empty */
   51               | ',' expr comma_expr_gen

   52 l_value: T_id
   53        | T_const_string
   54        | l_value '[' expr ']'

   55 expr: "const_int"
   56     | T_const_char
   57     | l_value
   58     | expr_high
   59     | func_call_expr
   60     | expr '+' expr
   61     | expr '-' expr
   62     | expr '*' expr
   63     | expr "div" expr
   64     | expr "mod" expr
   65     | "readInteger" '(' ')'
   66     | "readChar" '(' ')'
   67     | "ascii" '(' T_const_char ')'
   68     | "ascii" '(' T_id ')'
   69     | "chr" '(' "const_int" ')'
   70     | "chr" '(' T_id ')'
   71     | "strlen" '(' l_value ')'
   72     | "strcmp" '(' l_value ',' l_value ')'

   73 expr_high: '(' expr ')'
   74          | '+' expr
   75          | '-' expr

   76 cond: cond_high
   77     | cond "and" cond
   78     | cond "or" cond
   79     | expr '=' expr
   80     | expr '#' expr
   81     | expr '>' expr
   82     | expr '<' expr
   83     | expr ">=" expr
   84     | expr "<=" expr

   85 cond_high: '(' cond ')'
   86          | "not" cond


Terminals, with rules where they appear

T_eof (0) 0
'#' (35) 80
'(' (40) 5 6 36 37 38 39 40 41 42 46 47 48 49 65 66 67 68 69 70 71
    72 73 85
')' (41) 5 6 36 37 38 39 40 41 42 46 47 48 49 65 66 67 68 69 70 71
    72 73 85
'*' (42) 62
'+' (43) 60 74
',' (44) 12 40 41 42 51 72
'-' (45) 61 75
':' (58) 5 6 9 10 26
';' (59) 8 25 26 27 28 30 34 35 36 37 38 39
'<' (60) 82
'=' (61) 79
'>' (62) 81
'[' (91) 17 20 54
']' (93) 17 20 54
'{' (123) 43
'}' (125) 43
error (256)
"and" (258) 77
"char" (259) 14
"div" (260) 63
"do" (261) 33
"else" (262) 32
"fun" (263) 5 6
"if" (264) 31 32
"int" (265) 13
"mod" (266) 64
"not" (267) 86
"nothing" (268) 19
"or" (269) 78
"ref" (270) 9
"return" (271) 34 35
"then" (272) 31 32
"var" (273) 26
"while" (274) 33
"writeInteger" (275) 36
"writeChar" (276) 37
"writeString" (277) 38 39
"readInteger" (278) 65
"readString" (279) 40
"readChar" (280) 66
"ascii" (281) 67 68
"chr" (282) 69 70
"strlen" (283) 71
"strcmp" (284) 72
"strcpy" (285) 41
"strcat" (286) 42
T_id (287) 5 6 9 10 12 26 38 40 46 47 48 49 52 68 70
"const_int" (288) 17 55 69
T_const_char (289) 56 67
T_const_string (290) 39 53
">=" (291) 83
"<=" (292) 84
"<-" (293) 28


Nonterminals, with rules where they appear

$accept (55)
    on left: 0
program (56)
    on left: 1, on right: 0
func_def (57)
    on left: 2, on right: 1 22
local_def_gen (58)
    on left: 3 4, on right: 2 4
header (59)
    on left: 5 6, on right: 2 25
fpar_def_gen (60)
    on left: 7 8, on right: 6 8
fpar_def (61)
    on left: 9 10, on right: 6 8
comma_id_gen (62)
    on left: 11 12, on right: 9 10 12 26
data_type (63)
    on left: 13 14, on right: 15 18 20 21
type (64)
    on left: 15, on right: 26
type_gen (65)
    on left: 16 17, on right: 15 17 20 21
ret_type (66)
    on left: 18 19, on right: 5 6
fpar_type (67)
    on left: 20 21, on right: 9 10
local_def (68)
    on left: 22 23 24, on right: 4
func_decl (69)
    on left: 25, on right: 23
var_def (70)
    on left: 26, on right: 24
stmt (71)
    on left: 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42, on right:
    31 32 33 45
block (72)
    on left: 43, on right: 2 29
stmt_list (73)
    on left: 44 45, on right: 43 45
func_call_stmt (74)
    on left: 46 47, on right: 30
func_call_expr (75)
    on left: 48 49, on right: 59
comma_expr_gen (76)
    on left: 50 51, on right: 47 49 51
l_value (77)
    on left: 52 53 54, on right: 28 41 42 54 57 71 72
expr (78)
    on left: 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72,
    on right: 28 35 36 37 40 47 49 51 54 60 61 62 63 64 73 74 75 79
    80 81 82 83 84
expr_high (79)
    on left: 73 74 75, on right: 58
cond (80)
    on left: 76 77 78 79 80 81 82 83 84, on right: 31 32 33 77 78 85
    86
cond_high (81)
    on left: 85 86, on right: 76


state 0

    0 $accept: . program T_eof

    "fun"  shift, and go to state 1

    program   go to state 2
    func_def  go to state 3
    header    go to state 4


state 1

    5 header: "fun" . T_id '(' ')' ':' ret_type
    6       | "fun" . T_id '(' fpar_def fpar_def_gen ')' ':' ret_type

    T_id  shift, and go to state 5


state 2

    0 $accept: program . T_eof

    T_eof  shift, and go to state 6


state 3

    1 program: func_def .

    $default  reduce using rule 1 (program)


state 4

    2 func_def: header . local_def_gen block

    "fun"  shift, and go to state 1
    "var"  shift, and go to state 7

    $default  reduce using rule 3 (local_def_gen)

    func_def       go to state 8
    local_def_gen  go to state 9
    header         go to state 10
    local_def      go to state 11
    func_decl      go to state 12
    var_def        go to state 13


state 5

    5 header: "fun" T_id . '(' ')' ':' ret_type
    6       | "fun" T_id . '(' fpar_def fpar_def_gen ')' ':' ret_type

    '('  shift, and go to state 14


state 6

    0 $accept: program T_eof .

    $default  accept


state 7

   26 var_def: "var" . T_id comma_id_gen ':' type ';'

    T_id  shift, and go to state 15


state 8

   22 local_def: func_def .

    $default  reduce using rule 22 (local_def)


state 9

    2 func_def: header local_def_gen . block

    '{'  shift, and go to state 16

    block  go to state 17


state 10

    2 func_def: header . local_def_gen block
   25 func_decl: header . ';'

    "fun"  shift, and go to state 1
    "var"  shift, and go to state 7
    ';'    shift, and go to state 18

    $default  reduce using rule 3 (local_def_gen)

    func_def       go to state 8
    local_def_gen  go to state 9
    header         go to state 10
    local_def      go to state 11
    func_decl      go to state 12
    var_def        go to state 13


state 11

    4 local_def_gen: local_def . local_def_gen

    "fun"  shift, and go to state 1
    "var"  shift, and go to state 7

    $default  reduce using rule 3 (local_def_gen)

    func_def       go to state 8
    local_def_gen  go to state 19
    header         go to state 10
    local_def      go to state 11
    func_decl      go to state 12
    var_def        go to state 13


state 12

   23 local_def: func_decl .

    $default  reduce using rule 23 (local_def)


state 13

   24 local_def: var_def .

    $default  reduce using rule 24 (local_def)


state 14

    5 header: "fun" T_id '(' . ')' ':' ret_type
    6       | "fun" T_id '(' . fpar_def fpar_def_gen ')' ':' ret_type

    "ref"  shift, and go to state 20
    T_id   shift, and go to state 21
    ')'    shift, and go to state 22

    fpar_def  go to state 23


state 15

   26 var_def: "var" T_id . comma_id_gen ':' type ';'

    ','  shift, and go to state 24

    $default  reduce using rule 11 (comma_id_gen)

    comma_id_gen  go to state 25


state 16

   43 block: '{' . stmt_list '}'

    $default  reduce using rule 44 (stmt_list)

    stmt_list  go to state 26


state 17

    2 func_def: header local_def_gen block .

    $default  reduce using rule 2 (func_def)


state 18

   25 func_decl: header ';' .

    $default  reduce using rule 25 (func_decl)


state 19

    4 local_def_gen: local_def local_def_gen .

    $default  reduce using rule 4 (local_def_gen)


state 20

    9 fpar_def: "ref" . T_id comma_id_gen ':' fpar_type

    T_id  shift, and go to state 27


state 21

   10 fpar_def: T_id . comma_id_gen ':' fpar_type

    ','  shift, and go to state 24

    $default  reduce using rule 11 (comma_id_gen)

    comma_id_gen  go to state 28


state 22

    5 header: "fun" T_id '(' ')' . ':' ret_type

    ':'  shift, and go to state 29


state 23

    6 header: "fun" T_id '(' fpar_def . fpar_def_gen ')' ':' ret_type

    ';'  shift, and go to state 30

    $default  reduce using rule 7 (fpar_def_gen)

    fpar_def_gen  go to state 31


state 24

   12 comma_id_gen: ',' . T_id comma_id_gen

    T_id  shift, and go to state 32


state 25

   26 var_def: "var" T_id comma_id_gen . ':' type ';'

    ':'  shift, and go to state 33


state 26

   43 block: '{' stmt_list . '}'
   45 stmt_list: stmt_list . stmt

    "if"            shift, and go to state 34
    "return"        shift, and go to state 35
    "while"         shift, and go to state 36
    "writeInteger"  shift, and go to state 37
    "writeChar"     shift, and go to state 38
    "writeString"   shift, and go to state 39
    "readString"    shift, and go to state 40
    "strcpy"        shift, and go to state 41
    "strcat"        shift, and go to state 42
    T_id            shift, and go to state 43
    T_const_string  shift, and go to state 44
    ';'             shift, and go to state 45
    '{'             shift, and go to state 16
    '}'             shift, and go to state 46

    stmt            go to state 47
    block           go to state 48
    func_call_stmt  go to state 49
    l_value         go to state 50


state 27

    9 fpar_def: "ref" T_id . comma_id_gen ':' fpar_type

    ','  shift, and go to state 24

    $default  reduce using rule 11 (comma_id_gen)

    comma_id_gen  go to state 51


state 28

   10 fpar_def: T_id comma_id_gen . ':' fpar_type

    ':'  shift, and go to state 52


state 29

    5 header: "fun" T_id '(' ')' ':' . ret_type

    "char"     shift, and go to state 53
    "int"      shift, and go to state 54
    "nothing"  shift, and go to state 55

    data_type  go to state 56
    ret_type   go to state 57


state 30

    8 fpar_def_gen: ';' . fpar_def fpar_def_gen

    "ref"  shift, and go to state 20
    T_id   shift, and go to state 21

    fpar_def  go to state 58


state 31

    6 header: "fun" T_id '(' fpar_def fpar_def_gen . ')' ':' ret_type

    ')'  shift, and go to state 59


state 32

   12 comma_id_gen: ',' T_id . comma_id_gen

    ','  shift, and go to state 24

    $default  reduce using rule 11 (comma_id_gen)

    comma_id_gen  go to state 60


state 33

   26 var_def: "var" T_id comma_id_gen ':' . type ';'

    "char"  shift, and go to state 53
    "int"   shift, and go to state 54

    data_type  go to state 61
    type       go to state 62


state 34

   31 stmt: "if" . cond "then" stmt
   32     | "if" . cond "then" stmt "else" stmt

    "not"           shift, and go to state 63
    "readInteger"   shift, and go to state 64
    "readChar"      shift, and go to state 65
    "ascii"         shift, and go to state 66
    "chr"           shift, and go to state 67
    "strlen"        shift, and go to state 68
    "strcmp"        shift, and go to state 69
    T_id            shift, and go to state 70
    "const_int"     shift, and go to state 71
    T_const_char    shift, and go to state 72
    T_const_string  shift, and go to state 44
    '+'             shift, and go to state 73
    '-'             shift, and go to state 74
    '('             shift, and go to state 75

    func_call_expr  go to state 76
    l_value         go to state 77
    expr            go to state 78
    expr_high       go to state 79
    cond            go to state 80
    cond_high       go to state 81


state 35

   34 stmt: "return" . ';'
   35     | "return" . expr ';'

    "readInteger"   shift, and go to state 64
    "readChar"      shift, and go to state 65
    "ascii"         shift, and go to state 66
    "chr"           shift, and go to state 67
    "strlen"        shift, and go to state 68
    "strcmp"        shift, and go to state 69
    T_id            shift, and go to state 70
    "const_int"     shift, and go to state 71
    T_const_char    shift, and go to state 72
    T_const_string  shift, and go to state 44
    '+'             shift, and go to state 73
    '-'             shift, and go to state 74
    '('             shift, and go to state 82
    ';'             shift, and go to state 83

    func_call_expr  go to state 76
    l_value         go to state 77
    expr            go to state 84
    expr_high       go to state 79


state 36

   33 stmt: "while" . cond "do" stmt

    "not"           shift, and go to state 63
    "readInteger"   shift, and go to state 64
    "readChar"      shift, and go to state 65
    "ascii"         shift, and go to state 66
    "chr"           shift, and go to state 67
    "strlen"        shift, and go to state 68
    "strcmp"        shift, and go to state 69
    T_id            shift, and go to state 70
    "const_int"     shift, and go to state 71
    T_const_char    shift, and go to state 72
    T_const_string  shift, and go to state 44
    '+'             shift, and go to state 73
    '-'             shift, and go to state 74
    '('             shift, and go to state 75

    func_call_expr  go to state 76
    l_value         go to state 77
    expr            go to state 78
    expr_high       go to state 79
    cond            go to state 85
    cond_high       go to state 81


state 37

   36 stmt: "writeInteger" . '(' expr ')' ';'

    '('  shift, and go to state 86


state 38

   37 stmt: "writeChar" . '(' expr ')' ';'

    '('  shift, and go to state 87


state 39

   38 stmt: "writeString" . '(' T_id ')' ';'
   39     | "writeString" . '(' T_const_string ')' ';'

    '('  shift, and go to state 88


state 40

   40 stmt: "readString" . '(' expr ',' T_id ')'

    '('  shift, and go to state 89


state 41

   41 stmt: "strcpy" . '(' l_value ',' l_value ')'

    '('  shift, and go to state 90


state 42

   42 stmt: "strcat" . '(' l_value ',' l_value ')'

    '('  shift, and go to state 91


state 43

   46 func_call_stmt: T_id . '(' ')'
   47               | T_id . '(' expr comma_expr_gen ')'
   52 l_value: T_id .

    '('  shift, and go to state 92

    $default  reduce using rule 52 (l_value)


state 44

   53 l_value: T_const_string .

    $default  reduce using rule 53 (l_value)


state 45

   27 stmt: ';' .

    $default  reduce using rule 27 (stmt)


state 46

   43 block: '{' stmt_list '}' .

    $default  reduce using rule 43 (block)


state 47

   45 stmt_list: stmt_list stmt .

    $default  reduce using rule 45 (stmt_list)


state 48

   29 stmt: block .

    $default  reduce using rule 29 (stmt)


state 49

   30 stmt: func_call_stmt . ';'

    ';'  shift, and go to state 93


state 50

   28 stmt: l_value . "<-" expr ';'
   54 l_value: l_value . '[' expr ']'

    "<-"  shift, and go to state 94
    '['   shift, and go to state 95


state 51

    9 fpar_def: "ref" T_id comma_id_gen . ':' fpar_type

    ':'  shift, and go to state 96


state 52

   10 fpar_def: T_id comma_id_gen ':' . fpar_type

    "char"  shift, and go to state 53
    "int"   shift, and go to state 54

    data_type  go to state 97
    fpar_type  go to state 98


state 53

   14 data_type: "char" .

    $default  reduce using rule 14 (data_type)


state 54

   13 data_type: "int" .

    $default  reduce using rule 13 (data_type)


state 55

   19 ret_type: "nothing" .

    $default  reduce using rule 19 (ret_type)


state 56

   18 ret_type: data_type .

    $default  reduce using rule 18 (ret_type)


state 57

    5 header: "fun" T_id '(' ')' ':' ret_type .

    $default  reduce using rule 5 (header)


state 58

    8 fpar_def_gen: ';' fpar_def . fpar_def_gen

    ';'  shift, and go to state 30

    $default  reduce using rule 7 (fpar_def_gen)

    fpar_def_gen  go to state 99


state 59

    6 header: "fun" T_id '(' fpar_def fpar_def_gen ')' . ':' ret_type

    ':'  shift, and go to state 100


state 60

   12 comma_id_gen: ',' T_id comma_id_gen .

    $default  reduce using rule 12 (comma_id_gen)


state 61

   15 type: data_type . type_gen

    '['  shift, and go to state 101

    $default  reduce using rule 16 (type_gen)

    type_gen  go to state 102


state 62

   26 var_def: "var" T_id comma_id_gen ':' type . ';'

    ';'  shift, and go to state 103


state 63

   86 cond_high: "not" . cond

    "not"           shift, and go to state 63
    "readInteger"   shift, and go to state 64
    "readChar"      shift, and go to state 65
    "ascii"         shift, and go to state 66
    "chr"           shift, and go to state 67
    "strlen"        shift, and go to state 68
    "strcmp"        shift, and go to state 69
    T_id            shift, and go to state 70
    "const_int"     shift, and go to state 71
    T_const_char    shift, and go to state 72
    T_const_string  shift, and go to state 44
    '+'             shift, and go to state 73
    '-'             shift, and go to state 74
    '('             shift, and go to state 75

    func_call_expr  go to state 76
    l_value         go to state 77
    expr            go to state 78
    expr_high       go to state 79
    cond            go to state 104
    cond_high       go to state 81


state 64

   65 expr: "readInteger" . '(' ')'

    '('  shift, and go to state 105


state 65

   66 expr: "readChar" . '(' ')'

    '('  shift, and go to state 106


state 66

   67 expr: "ascii" . '(' T_const_char ')'
   68     | "ascii" . '(' T_id ')'

    '('  shift, and go to state 107


state 67

   69 expr: "chr" . '(' "const_int" ')'
   70     | "chr" . '(' T_id ')'

    '('  shift, and go to state 108


state 68

   71 expr: "strlen" . '(' l_value ')'

    '('  shift, and go to state 109


state 69

   72 expr: "strcmp" . '(' l_value ',' l_value ')'

    '('  shift, and go to state 110


state 70

   48 func_call_expr: T_id . '(' ')'
   49               | T_id . '(' expr comma_expr_gen ')'
   52 l_value: T_id .

    '('  shift, and go to state 111

    $default  reduce using rule 52 (l_value)


state 71

   55 expr: "const_int" .

    $default  reduce using rule 55 (expr)


state 72

   56 expr: T_const_char .

    $default  reduce using rule 56 (expr)


state 73

   74 expr_high: '+' . expr

    "readInteger"   shift, and go to state 64
    "readChar"      shift, and go to state 65
    "ascii"         shift, and go to state 66
    "chr"           shift, and go to state 67
    "strlen"        shift, and go to state 68
    "strcmp"        shift, and go to state 69
    T_id            shift, and go to state 70
    "const_int"     shift, and go to state 71
    T_const_char    shift, and go to state 72
    T_const_string  shift, and go to state 44
    '+'             shift, and go to state 73
    '-'             shift, and go to state 74
    '('             shift, and go to state 82

    func_call_expr  go to state 76
    l_value         go to state 77
    expr            go to state 112
    expr_high       go to state 79


state 74

   75 expr_high: '-' . expr

    "readInteger"   shift, and go to state 64
    "readChar"      shift, and go to state 65
    "ascii"         shift, and go to state 66
    "chr"           shift, and go to state 67
    "strlen"        shift, and go to state 68
    "strcmp"        shift, and go to state 69
    T_id            shift, and go to state 70
    "const_int"     shift, and go to state 71
    T_const_char    shift, and go to state 72
    T_const_string  shift, and go to state 44
    '+'             shift, and go to state 73
    '-'             shift, and go to state 74
    '('             shift, and go to state 82

    func_call_expr  go to state 76
    l_value         go to state 77
    expr            go to state 113
    expr_high       go to state 79


state 75

   73 expr_high: '(' . expr ')'
   85 cond_high: '(' . cond ')'

    "not"           shift, and go to state 63
    "readInteger"   shift, and go to state 64
    "readChar"      shift, and go to state 65
    "ascii"         shift, and go to state 66
    "chr"           shift, and go to state 67
    "strlen"        shift, and go to state 68
    "strcmp"        shift, and go to state 69
    T_id            shift, and go to state 70
    "const_int"     shift, and go to state 71
    T_const_char    shift, and go to state 72
    T_const_string  shift, and go to state 44
    '+'             shift, and go to state 73
    '-'             shift, and go to state 74
    '('             shift, and go to state 75

    func_call_expr  go to state 76
    l_value         go to state 77
    expr            go to state 114
    expr_high       go to state 79
    cond            go to state 115
    cond_high       go to state 81


state 76

   59 expr: func_call_expr .

    $default  reduce using rule 59 (expr)


state 77

   54 l_value: l_value . '[' expr ']'
   57 expr: l_value .

    '['  shift, and go to state 95

    $default  reduce using rule 57 (expr)


state 78

   60 expr: expr . '+' expr
   61     | expr . '-' expr
   62     | expr . '*' expr
   63     | expr . "div" expr
   64     | expr . "mod" expr
   79 cond: expr . '=' expr
   80     | expr . '#' expr
   81     | expr . '>' expr
   82     | expr . '<' expr
   83     | expr . ">=" expr
   84     | expr . "<=" expr

    "div"  shift, and go to state 116
    "mod"  shift, and go to state 117
    ">="   shift, and go to state 118
    "<="   shift, and go to state 119
    '='    shift, and go to state 120
    '#'    shift, and go to state 121
    '>'    shift, and go to state 122
    '<'    shift, and go to state 123
    '+'    shift, and go to state 124
    '-'    shift, and go to state 125
    '*'    shift, and go to state 126


state 79

   58 expr: expr_high .

    $default  reduce using rule 58 (expr)


state 80

   31 stmt: "if" cond . "then" stmt
   32     | "if" cond . "then" stmt "else" stmt
   77 cond: cond . "and" cond
   78     | cond . "or" cond

    "and"   shift, and go to state 127
    "or"    shift, and go to state 128
    "then"  shift, and go to state 129


state 81

   76 cond: cond_high .

    $default  reduce using rule 76 (cond)


state 82

   73 expr_high: '(' . expr ')'

    "readInteger"   shift, and go to state 64
    "readChar"      shift, and go to state 65
    "ascii"         shift, and go to state 66
    "chr"           shift, and go to state 67
    "strlen"        shift, and go to state 68
    "strcmp"        shift, and go to state 69
    T_id            shift, and go to state 70
    "const_int"     shift, and go to state 71
    T_const_char    shift, and go to state 72
    T_const_string  shift, and go to state 44
    '+'             shift, and go to state 73
    '-'             shift, and go to state 74
    '('             shift, and go to state 82

    func_call_expr  go to state 76
    l_value         go to state 77
    expr            go to state 130
    expr_high       go to state 79


state 83

   34 stmt: "return" ';' .

    $default  reduce using rule 34 (stmt)


state 84
